# dict

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  conanfile.py  meson.build
cmake/: DICTConfig.cmake  DICTPackage.cmake  PatchFindGTest.cmake  desaConfig.cmake  dictConfig.cmake
include/desa/: bit_vector.hpp  chained_updating_policy.hpp  noop.hpp  rbtree.hpp  text_index.hpp  tree_list.hpp  updating_csa_policy.hpp  updating_lcp_policy.hpp  updating_nothing_policy.hpp  wavelet_tree.hpp  with_csa.hpp  with_lcp.hpp
include/desa/internal/: bit_vector.hpp  chained_updater.hpp  lcp_trait.hpp  partial_sum.hpp  permutation.hpp  rbtree.hpp  text_index_trait.hpp  tree_list.hpp  wavelet_matrix.hpp  wavelet_tree.hpp
include/dict/: text_index.hpp  with_csa.hpp  with_lcp.hpp
include/dict/internal/: bit_vector.hpp  chained_updater.hpp  lcp_trait.hpp  partial_sum.hpp  permutation.hpp  rbtree.hpp  text_index_trait.hpp  tree_list.hpp  type_list.hpp  wavelet_matrix.hpp  with_lcp_impl.hpp
src/: CMakeLists.txt  bit_vector.hpp  chained_updating_policy.hpp  idx_tree.hpp  meson.build  partial_sum.hpp  permutation.cpp  permutation.hpp  rbtree.hpp  suffix_array.cpp  suffix_array.hpp  tree_list.hpp  updating_csa_policy.hpp  updating_lcp_policy.hpp  updating_nothing_policy.hpp  wavelet_tree.hpp
subprojects/: gtest.wrap
test/: CMakeLists.txt  bit_vector_test.cpp  idx_tree_test.cpp  meson.build  partial_sum_test.cpp  permutation_test.cpp  rbtree_test.cpp  suffix_array_test.cpp  text_index_test.cpp  tree_list_test.cpp  wavelet_matrix_test.cpp  wavelet_tree_test.cpp
